--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     var shipslist=[];
     var bomlist=[];
     var explosionlist=[];
-    var textlist=['欣','容','你','好','可','爱'];
+    var textlist=['欣','容','你','好','吖'];
     var iii=-1;
     var sco=0;
     shipslist.push(myship);
